# sibs-book-store-warlen-magno

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: book_detail_fragment.xml  book_detail_layout.xml  book_list_fragment.xml  (+1 more)
data/: CMakeLists.txt  build.gradle
data/src/main/: AndroidManifest.xml
data/src/main/java/: SibsAPI.kt
data/src/main/java/com/sibsBookStore/data/: NetworkModule.kt
data/src/main/java/com/sibsBookStore/data/gateway/: BookListGateWayImpl.kt
data/src/main/java/com/sibsBookStore/data/mapper/: BookListMapper.kt
data/src/main/java/com/sibsBookStore/data/paging/: BookDataSource.kt
data/src/main/java/com/sibsBookStore/data/remote/: GetBookListRemoteDataSource.kt
data/src/main/java/com/sibsBookStore/data/remote/api/: BookService.kt
data/src/main/java/com/sibsBookStore/data/remote/model/: BookResponse.kt
data/src/main/java/com/sibsBookStore/data/repository/: BookListRepository.kt
data/src/main/java/com/sibsBookStore/data/util/: BaseMapper.kt
data/src/main/jni/: sibs-native-lib.cpp
data/src/test/java/com/sibsBookStore/data/gateway/: MovieDetailGateWayImplTest.kt
data/src/test/java/com/sibsBookStore/data/mapper/: BookListMapperTest.kt  MovieDetailMapperTest.kt
data/src/test/java/com/sibsBookStore/data/remote/: GetBookListRemoteDataSourceTest.kt
data/src/test/java/com/sibsBookStore/data/repository/: BookListRepositoryTest.kt
data/src/test/java/com/sibsBookStore/data/utils/: TestData.kt
domain/src/main/: AndroidManifest.xml
(+44 files in other folders)
